data/derived/fa15/progs/unify/prog0445.ml.out
Characters 16-19:
  let _ = bigMul [1,2] [1,2];;
                  ^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
